# server/api/v1/controllers/faq/routes.js
@@ -8,15 +8,18 @@ export default Express.Router()
   .put("/editStaticContent", controller.editStaticContent)
   .get("/staticContentList", controller.staticContentList)
   .post("/addTestimonial", controller.addTestimonial)
-  .put("/static", controller.editStaticContent)
-  .get("/static", controller.staticContentList)
+  .get("/viewTestimonial/:_id", controller.viewTestimonial)
+  .get("/viewStory", controller.viewStory)
+  .post("/addStory", controller.addStory)
   .post("/addFAQ", controller.addFAQ)
   .get("/viewFAQ/:_id", controller.viewFAQ)
   .get("/faqList", controller.faqList)
+
+
 
   .use(auth.verifyToken)
   .put("/editFAQ", controller.editFAQ)
   .delete("/deleteFAQ", controller.deleteFAQ)
   .delete("/deleteStaticContent", controller.deleteStaticContent)
   .put("/editTestimonial", controller.editTestimonial)
-
+  .put("/editStory", controller.editStory)
