# server/models/Story.js
@@ -7,8 +7,8 @@ import staticType from "../enums/status";
 import bcrypt from "bcryptjs";
 import mongoose from "mongoose";
 
-const testimonialModel = new Schema({
-  Testimonial_no: {
+const StoryModel = new Schema({
+  Story_no: {
     type: String,
   },
   title: {
@@ -24,40 +24,40 @@ const testimonialModel = new Schema({
   },
 });
 
-module.exports = Mongoose.model("Testimonial", testimonialModel);
+module.exports = Mongoose.model("Story", StoryModel);
 
 (async () => {
-  let result = Mongoose.model("Testimonial", testimonialModel).find({});
+  let result = Mongoose.model("Story", StoryModel).find({});
   if (result.length != 0) {
-    console.log("DEFAULT Testimonial content already  Created..😀😀");
+    console.log("DEFAULT Story already  Created..😀😀");
   } else {
     var object1 = {
-      Testimonial_no: "Testimonial 1",
+      Story_no: "Story 1",
       title: "Term And Conditions ",
       description:
         "A term and conditions agreement is the agreement that includes the terms, the rules and the guidelines of acceptable behavior and other useful sections to which users must agree in order to use or access your website and mobioe app.",
     };
 
     var object2 = {
-      Testimonial_no: "Testimonial 2",
+      Story_no: "Story 2",
       title: "Term And Conditions ",
       description:
         "A term and conditions agreement is the agreement that includes the terms, the rules and the guidelines of acceptable behavior and other useful sections to which users must agree in order to use or access your website and mobioe app.",
     };
 
     var object3 = {
-      Testimonial_no: "Testimonial 3",
+      Story_no: "Story 3",
       title: "Term And Conditions ",
       description:
         "A term and conditions agreement is the agreement that includes the terms, the rules and the guidelines of acceptable behavior and other useful sections to which users must agree in order to use or access your website and mobioe app.",
     };
 
-    let testimonialResult = Mongoose.model(
-      "Testimonial",
-      testimonialModel
+    let StoryResult = Mongoose.model(
+      "Story",
+      StoryModel
     ).create(object1, object2, object3);
-    if (testimonialResult) {
-      console.log("DEFAULT Testimonial Created..😀😀");
+    if (StoryResult) {
+      console.log("DEFAULT Story Created..😀😀");
     }
   }
 }).call();
